updated Lithuanian translation

--- a/po/wesnoth-dm/lt.po
+++ b/po/wesnoth-dm/lt.po
@@ -31,18 +31,17 @@ msgstr "DM"
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:31
 msgid "(Normal)"
-msgstr ""
+msgstr "(Normalus)"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:31
-#, fuzzy
 msgid "Apprentice"
-msgstr "Mokinys=(lengviausia)"
+msgstr "Mokinys"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:32
 msgid "(Challenging)"
-msgstr ""
+msgstr "(Iššaukiantis)"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:32
@@ -52,13 +51,12 @@ msgstr "Magas"
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:33
 msgid "(Difficult)"
-msgstr ""
+msgstr "(Sudėtingas)"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:33
-#, fuzzy
 msgid "Great Mage"
-msgstr "Didysis magas=(sunkiausia)"
+msgstr "Didysis magas"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:37
@@ -2780,7 +2778,6 @@ msgstr "Trgrau"
 #. [objective]: condition=lose
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:198
 #, fuzzy
-#| msgid "Death of Garard"
 msgid "Death of Garard II"
 msgstr "Garardo mirtis"
 
@@ -4384,6 +4381,3 @@ msgstr "Dronis"
 #: data/campaigns/Delfadors_Memoirs/utils/sides.cfg:292
 msgid "Artor"
 msgstr "Artoras"
-
-#~ msgid "Defeat Zorlan"
-#~ msgstr "Nugalėkite Zorlaną"
