--- a/po/wesnoth-dw/lt.po
+++ b/po/wesnoth-dw/lt.po
@@ -291,12 +291,12 @@ msgstr ""
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:613
 msgid "He is raising the dead from every village!"
-msgstr ""
+msgstr "Jis prikelia mirusius kiekvienam kaime!"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:617
 msgid "This will be a dark day, but we <i>will</i> prevail."
-msgstr ""
+msgstr "Bus niūri diena, bet mes <i>nugalėsim</i>."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:639
@@ -348,6 +348,8 @@ msgid ""
 "Move Kai Krellis to the north-west corner of the map. He must be level one "
 "or higher."
 msgstr ""
+"Nuveskite Kai Krelį į šiaurės vakarinį lygio kampą. Jis turi būti pirmo arba "
+"aukštesnio lygio."
 
 #. [objective]: condition=win
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:88
@@ -373,7 +375,7 @@ msgstr "Nugalėkite visus priešų vadus"
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:185
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:200
 msgid "Mal-Ravanal’s Forces"
-msgstr ""
+msgstr "Mal-Ravanalo pajėgos"
 
 #. [side]: type=Lich, id=Mal-Kevek
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:122
@@ -1369,7 +1371,7 @@ msgstr "Aha. Paaiškink kaip šitą daiktą valdyti."
 #. [scenario]: id=07_Bilheld
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:24
 msgid "Bilheld"
-msgstr ""
+msgstr "Bilheldas"
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:32
@@ -2627,7 +2629,7 @@ msgstr ""
 #: data/campaigns/Dead_Water/units/Warrior_King.cfg:52
 #: data/campaigns/Dead_Water/units/Young_King.cfg:47
 msgid "mace"
-msgstr ""
+msgstr "buožė"
 
 #. [unit_type]: id=Merman Warrior King, race=merman
 #: data/campaigns/Dead_Water/units/Warrior_King.cfg:4
@@ -2645,7 +2647,7 @@ msgstr ""
 #. [unit_type]: id=Merman Young King, race=merman
 #: data/campaigns/Dead_Water/units/Young_King.cfg:4
 msgid "Young King"
-msgstr ""
+msgstr "Jaunas karalius"
 
 #. [unit_type]: id=Merman Young King, race=merman
 #: data/campaigns/Dead_Water/units/Young_King.cfg:30
@@ -2784,6 +2786,3 @@ msgid ""
 "This attack hits so hard that the defender is dazed and can no longer "
 "enforce a zone of control. The effect wears off on the defenders next turn"
 msgstr ""
-
-#~ msgid "I think that could be useful. I’ll take it."
-#~ msgstr "O tai būtų naudinga. Aš paimsiu."
