--- a/po/wesnoth-help/lt.po
+++ b/po/wesnoth-help/lt.po
@@ -3946,124 +3946,112 @@ msgstr "Gilus požemis"
 #. [time]: id=midnight_hour
 #: data/core/macros/schedules.cfg:179
 msgid "Midnight"
-msgstr ""
+msgstr "Vidurnaktis"
 
 #. [time]: id=second_watch_hour1
 #: data/core/macros/schedules.cfg:191
-#, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — First Hour"
-msgstr "Antroji sargyba"
+msgstr "Antroji sargyba — Pirmoji valanda"
 
 #. [time]: id=second_watch_hour2
 #: data/core/macros/schedules.cfg:203
-#, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — Second Hour"
-msgstr "Antroji sargyba"
+msgstr "Antroji sargyba — Antroji valanda"
 
 #. [time]: id=second_watch_hour3
 #: data/core/macros/schedules.cfg:215
-#, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — Third Hour"
-msgstr "Antroji sargyba"
+msgstr "Antroji sargyba — Trečioji valanda"
 
 #. [time]: id=second_watch_hour4
 #: data/core/macros/schedules.cfg:227
-#, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — Fourth Hour"
-msgstr "Antroji sargyba"
+msgstr "Antroji sargyba — Ketvirtoji valanda"
 
 #. [time]: id=second_watch_hour5
 #: data/core/macros/schedules.cfg:239
-#, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — Fifth Hour"
-msgstr "Antroji sargyba"
+msgstr "Antroji sargyba — Penktoji valanda"
 
 #. [time]: id=second_watch_hour6
 #: data/core/macros/schedules.cfg:251
-#, fuzzy
-#| msgid "Second Watch"
 msgid "Second Watch — Sixth Hour"
-msgstr "Antroji sargyba"
+msgstr "Antroji sargyba — Šeštoji valanda"
 
 #. [time]: id=morning_hour1
 #: data/core/macros/schedules.cfg:274
 msgid "Morning — First Hour"
-msgstr ""
+msgstr "Rytas — Pirmoji valanda"
 
 #. [time]: id=morning_hour2
 #: data/core/macros/schedules.cfg:283
 msgid "Morning — Second Hour"
-msgstr ""
+msgstr "Rytas — Antroji valanda"
 
 #. [time]: id=morning_hour3
 #: data/core/macros/schedules.cfg:292
 msgid "Morning — Third Hour"
-msgstr ""
+msgstr "Rytas — Trečioji valanda"
 
 #. [time]: id=morning_hour4
 #: data/core/macros/schedules.cfg:301
 msgid "Morning — Fourth Hour"
-msgstr ""
+msgstr "Rytas — Ketvirtoji valanda"
 
 #. [time]: id=midday_hour
 #: data/core/macros/schedules.cfg:310
 msgid "Midday"
-msgstr ""
+msgstr "Vidurdienis"
 
 #. [time]: id=afternoon_hour1
 #: data/core/macros/schedules.cfg:319
 msgid "Afternoon — First Hour"
-msgstr ""
+msgstr "Popietė — Pirmoji valanda"
 
 #. [time]: id=afternoon_hour2
 #: data/core/macros/schedules.cfg:328
 msgid "Afternoon — Second Hour"
-msgstr ""
+msgstr "Popietė — Antroji valanda"
 
 #. [time]: id=afternoon_hour3
 #: data/core/macros/schedules.cfg:337
 msgid "Afternoon — Third Hour"
-msgstr ""
+msgstr "Popietė — Trečioji valanda"
 
 #. [time]: id=afternoon_hour4
 #: data/core/macros/schedules.cfg:346
 msgid "Afternoon — Fourth Hour"
-msgstr ""
+msgstr "Popietė — Ketvirtoji valanda"
 
 #. [time]: id=afternoon_hour5
 #: data/core/macros/schedules.cfg:355
 msgid "Afternoon — Fifth Hour"
-msgstr ""
+msgstr "Popietė — Penktoji valanda"
 
 #. [time]: id=afternoon_hour6
 #: data/core/macros/schedules.cfg:364
 msgid "Afternoon — Sixth Hour"
-msgstr ""
+msgstr "Popietė — Šeštoji valanda"
 
 #. [time]: id=first_watch_hour1
 #: data/core/macros/schedules.cfg:386
 msgid "First Watch — First Hour"
-msgstr ""
+msgstr "Pirmoji sargyba — Pirmoji valanda"
 
 #. [time]: id=first_watch_hour2
 #: data/core/macros/schedules.cfg:398
 msgid "First Watch — Second Hour"
-msgstr ""
+msgstr "Pirmoji sargyba — Antroji valanda"
 
 #. [time]: id=first_watch_hour3
 #: data/core/macros/schedules.cfg:410
 msgid "First Watch — Third Hour"
-msgstr ""
+msgstr "Pirmoji sargyba — Trečioji valanda"
 
 #. [time]: id=first_watch_hour4
 #: data/core/macros/schedules.cfg:422
 msgid "First Watch — Fourth Hour"
-msgstr ""
+msgstr "Pirmoji sargyba — Ketvirtoji valanda"
 
 #: data/core/macros/special-notes.cfg:5
 msgid ""
@@ -4227,9 +4215,6 @@ msgstr ""
 
 #: data/core/macros/special-notes.cfg:77
 #, fuzzy
-#| msgid ""
-#| " The unit has magical attacks, which always have a high chance of hitting "
-#| "an opponent."
 msgid ""
 " This unit has magical attacks, which always have a high chance of hitting "
 "an opponent."
