--- a/po/wesnoth-httt/lt.po
+++ b/po/wesnoth-httt/lt.po
@@ -3384,7 +3384,7 @@ msgstr "Halgar Du’naras"
 #. [side]: type=Orcish Warrior, id=Gorlak
 #: data/campaigns/Heir_To_The_Throne/scenarios/12_Northern_Winter.cfg:112
 msgid "Gorlak"
-msgstr ""
+msgstr "Gorlakas"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/12_Northern_Winter.cfg:157
