--- a/po/wesnoth-l/lt.po
+++ b/po/wesnoth-l/lt.po
@@ -692,6 +692,8 @@ msgid ""
 "We need evidence. Hard evidence... but wait— Are those orcish war drums I "
 "hear?"
 msgstr ""
+"Mums reikia įrodymų. Tvirtų įrodymų... Bet palaukit, kas ten dunda? Ar ne "
+"orkų karo būgnai?"
 
 #. [message]: speaker=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:213
