--- a/po/wesnoth-tutorial/lt.po
+++ b/po/wesnoth-tutorial/lt.po
@@ -1640,12 +1640,6 @@ msgstr "<big>Dienos laikas</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1227
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "After this dialog, hold the mouse over the landscape image above the "
-#| "minimap on the right. This brings up a description of the time of day, "
-#| "showing who has the advantage."
 msgid ""
 "\n"
 "After this dialog, hold the mouse over the landscape image below the minimap "
@@ -1653,7 +1647,7 @@ msgid ""
 "has the advantage."
 msgstr ""
 "\n"
-"Po šio pranešimo palaikykite pelę virš panoramos virš mažojo žemėlapio "
+"Po šio pranešimo palaikykite pelę virš panoramos po mažuoju žemėlapiu "
 "dešinėje. Pasirodys paros meto aprašymas su paaiškinimu kieno pusėje "
 "pranašumas."
 
