Fixed micro symbol in the Dutch translation.

--- a/po/wesnoth/nl.po
+++ b/po/wesnoth/nl.po
@@ -6479,7 +6479,7 @@ msgstr "m"
 
 #: src/serialization/string_utils.cpp:388
 msgid "prefix_micro^μ"
-msgstr "μ"
+msgstr "µ"
 
 #: src/serialization/string_utils.cpp:389
 msgid "prefix_nano^n"
